# moos

./: .gitignore  .gitmodules  README.md  environment.sh  environment_ros1.sh
Docker/cpu/: Dockerfile  build.sh  cpu_run.sh  pull.sh  push.sh
Docker/gpu/: Dockerfile  build.sh  gpu_run.sh  pull.sh  push.sh
docs/: residual_RL.md
moos-ivp-2680/: clean.sh
moos-ivp-2680/.svn/: wc.db
moos-ivp-2680/missions/attic_rescue/: plug_pHelmIvP.moos  plug_pHostInfo.moos  plug_pHostInfoV2.moos
moos-ivp-2680/missions/attic_rescue_baseline/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  mit_00.txt  mit_02.txt  mit_05.txt  plug_iM300.moos  plug_uProcessWatch.moos
moos-ivp-2680/missions/attic_rescue_baseline2/: build_swim_files.sh  launch_shoreside.sh  meta_vehicle.bhv  mit_01.txt
moos-ivp-2680/missions/attic_rescue_baseline2_2023/: catalog.txt  dday1  launch.sh  launch_vehicle.sh  mit_02.txt  plug_iM300.moos  plug_pLogger.moos  plug_pShare.moos  plug_uSimMarine.moos
moos-ivp-2680/missions/lab_08_baseline/: meta_shoreside.moos
moos-ivp-2680/missions/lab_09_charlie_dana_baseline/: meta_vehicle.bhv
moos-ivp-2680/missions/man_overboard/: .checkvars  alpha.bhv  launch.sh
moos-ivp-2680/missions/rescue_baseline/: clean.sh  launch_shoreside.sh  meta_shoreside.moos  mit_00.txt  mit_01.txt  mit_05.txt  plugs.moos
moos-ivp-2680/missions/rescue_baseline_new/: launch_vehicle.sh  meta_vehicle.moos
moos-ivp-2680/src/app_swimview/: CMakeLists.txt  SWIM_GUI.cpp  SWIM_GUI.h  SWIM_GUI_Widgets.cpp  SwimView_Info.cpp  SwimView_Info.h  SwimViewer.cpp  SwimViewer.h  main.cpp  mit_00.txt  mit_02.txt  mit_10.txt  mit_11.txt  notes.txt
moos-ivp-2680/src/lib_bhv_scout/: BHV_Scout.cpp  CMakeLists.txt  README
moos-ivp-2680/src/uFldRescueMgr/: CMakeLists.txt  RescueMgr_Info.cpp  RescueMgr_Info.h
moos-ivp-pavlab/: clean.sh
moos-ivp-pavlab/.svn/: wc.db
moos-ivp-pavlab/docs/: old_iM200_config.txt
moos-ivp-pavlab/scripts/: GenLaunchDiff.sh  GenLaunchShoreside.sh  GenLaunchShoresideDiff.sh  GenLaunchVehicleDiff.sh  GenMOOSApp_AppCasting_Multi  README  agif.sh  alog_note.sh  dirconflicts.sh  thin_logdirs
moos-ivp-pavlab/src/app_alogceval/: CMakeLists.txt  LogEvalHandler.cpp  LogEvalHandler.h
moos-ivp-pavlab/src/app_convoy_order/: CMakeLists.txt  OrderHandler.cpp
moos-ivp-pavlab/src/app_pickjoust/: CMakeLists.txt  PickJoust_Info.h  main.cpp
moos-ivp-pavlab/src/app_test_armadillo/: CMakeLists.txt  main.cpp
moos-ivp-pavlab/src/dep_lib_bhv_shell/: CMakeLists.txt
moos-ivp-pavlab/src/dep_pAqctNodeCtrl/: AqctNodeCtrl.cpp  AqctNodeCtrl_Info.h  CMakeLists.txt  main.cpp
moos-ivp-pavlab/src/dep_pFalconRunMgr/: CMakeLists.txt  FalconRunMgr.cpp  FalconRunMgr_Info.h
moos-ivp-pavlab/src/dep_pMultiAgentColFilt/: CMakeLists.txt  ForwardSetEst.cpp  MultiAgentColFilt.h  MultiAgentColFilt_Info.h
moos-ivp-pavlab/src/iHydroMAN_IvPExtend/: CMakeLists.txt  HydroMAN_IvPExtend.cpp  HydroMAN_IvPExtend.h  HydroMAN_IvPExtend_Info.cpp  iHydroMAN_IvPExtend.moos  main.cpp
moos-ivp-pavlab/src/iPingSim/: CMakeLists.txt  PingSim_Info.cpp
moos-ivp-pavlab/src/lib_bathygrid/: CMakeLists.txt  EsriBathyGrid.cpp  EsriBathyGrid.h  EsriBathyGridUtils.cpp
moos-ivp-pavlab/src/lib_bhv_anderson/: CMakeLists.txt
moos-ivp-pavlab/src/lib_bhv_dubin/: BHV_DubinsPath.cpp  BHV_DubinsPath.h  CMakeLists.txt
moos-ivp-pavlab/src/lib_bhv_random_survey/: BHV_RandomSurvey.h  CMakeLists.txt
moos-ivp-pavlab/src/lib_bhv_tasks_comp/: BHV_TaskWaypoint2.cpp  BHV_TaskWaypoint2.h  CMakeLists.txt
moos-ivp-pavlab/src/lib_bhv_tasks_d2p/: BHV_TaskConvoy1.cpp  BHV_TaskWaypoint1.h  CMakeLists.txt
moos-ivp-pavlab/src/lib_convoy/: CMakeLists.txt  ConvoyRecap.h  ConvoySpdPolicy.cpp  ConvoyStatRecap.cpp  EvalConvoyEngine.cpp
moos-ivp-pavlab/src/lib_demuster_geometry/: CMakeLists.txt  demuster_geometry.cpp
moos-ivp-pavlab/src/lib_eval_engine/: CMakeLists.txt  EvalEngine.h  EvalEngineKernelCore.cpp  EvalEngineKernelCore.h  EvalEngineMessage.cpp  EvalEngineMessage.h  EvalEnginePostProcessor.h
moos-ivp-pavlab/src/lib_eval_engine/attic/: EvalEngineCore.h  EvalEngineCore_dep.cpp  EvalEngineCore_dep.h  EvalEnginePostProcessor.h_backup
moos-ivp-pavlab/src/lib_eval_engine/std_ee_kernels/: xStateTimer.cpp  xSurfaceOdometry.cpp
moos-ivp-pavlab/src/lib_hungarian_ext/: CMakeLists.txt  test
moos-ivp-pavlab/src/lib_legrun/: CMakeLists.txt
moos-ivp-pavlab/src/lib_seatrac_tools/: CMakeLists.txt
moos-ivp-pavlab/src/lib_seatrac_tools/BpClasses/: crc32.cpp  serialize.hpp  serializebuffer.hpp  types.h
moos-ivp-pavlab/src/lib_seatrac_tools/BpExamples/examples/: Application.h  MainWindow.cpp  seatrac-sdk-example.pro  ui_MainWindow.h
moos-ivp-pavlab/src/lib_seatrac_tools/BpSeatrac/: seatrac_cmdmsg.cpp  seatrac_cmdproc.hpp  seatrac_diagmsg.cpp  seatrac_diagmsg.hpp  seatrac_types.h  seatrac_utils.hpp
moos-ivp-pavlab/src/lib_seatrac_tools/BpSystem/Linux/: mutex.cpp  mutex.hpp  ticks.cpp
moos-ivp-pavlab/src/lib_serialdev/: CMakeLists.txt  serial_device.cpp
moos-ivp-pavlab/src/lib_sock_utils/: CMakeLists.txt  SockNinja.h  SockNinjaProtoBuf.cpp
moos-ivp-pavlab/src/pBathyChecker/: BathyChecker_Info.h  CMakeLists.txt  pBathyChecker.moos
moos-ivp-pavlab/src_mikala/: CMakeLists.txt
moos-ivp-pavlab/src_mikala/attic/pGenGreedyRescue/: CMakeLists.txt  GenGreedyRescue_Info.cpp
moos-ivp-pavlab/src_mikala/attic/pSendPoints/: NodeReport.cpp  main.cpp
moos-ivp-pavlab/src_mikala/pManagePoints/: NodeReport.h  SendPoints.cpp  SendPoints.h  SendPoints_Info.h  VisitPoint.cpp  VisitPoint.h  pSendPoints.moos
moos-ivp-pavlab/src_mikala/uFldCollisionDetectColregs/: CPAEvent_mnm.cpp  EncounterReport.cpp  EncounterReport.h
moos-ivp-pavlab/src_mikala/uFldColregsDetect/: CPAMonitor.h  CollisionDetector.cpp
moos-ivp-pavlab/src_rturrisi/: CMakeLists.txt
moos-ivp-pavlab/src_rturrisi/lib_bhv_fig8/: BHV_Fig8.cpp  BHV_Fig8.h  CMakeLists.txt  lemniscate.hpp
moos-ivp-pavlab/src_rturrisi/lib_bhv_formations/: BHV_FormationCtrl.cpp  BHV_FormationCtrl.h  CtrlPointQueue.cpp  CtrlPointQueue.h  FormationGeometry.hpp
moos-ivp/.svn/: wc.db
(+832 files in other folders)
